--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
                             <a href="tel:+33652502498" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
                             <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
+                            <a><br>Send us a message:</a>
                         </div>
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
@@ -180,6 +181,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
