--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                               <textarea id="message" name="Message" rows="5" required></textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Submit</button>
+                            <button type="submit" class="button">Send</button>
                       </form>
                     </div>
                 </div>
@@ -181,6 +181,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
