--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>-->
                     <li class="nav-item">
-                        <a href="#services" class="nav-link">Bundles</a>
+                        <a href="#services" class="nav-link">Services</a>
                     </li>
                     <!-- <li class="nav-item">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="nav-link">Ask</a>
@@ -181,6 +181,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
