--- a/index.html
+++ b/index.html
@@ -157,6 +157,9 @@
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
                             <button type="submit" class="button">Send</button>
                       </form>
+                        <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                        <script src="https://elfsightcdn.com/platform.js" async></script>
+                        <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
                     </div>
                 </div>
             </section>
@@ -181,6 +184,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
