--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section style="padding:10px 10px 10px 10px;">
                 <h2 class="section-title">Feed</h2>
                 <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
                 <script src="https://elfsightcdn.com/platform.js" async></script>
-                <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy style="padding:10px 10px 10px 10px;"></div>
+                <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
             </section>
         </main>
         <footer class="footer">
@@ -187,6 +187,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
