--- a/index.html
+++ b/index.html
@@ -160,11 +160,13 @@
                     </div>
                 </div>
             </section>
-            <section style="padding:10px 10px 10px 10px;">
-                <h2 class="section-title">Feed</h2>
-                <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                <script src="https://elfsightcdn.com/platform.js" async></script>
-                <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+            <section>
+                <div class="section-content">
+                    <h2 class="section-title">Feed</h2>
+                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                </div>
             </section>
         </main>
         <footer class="footer">
@@ -187,38 +189,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
