--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     </div>
                 </div>
             </section>
-            <section>
+            <section id="feed">
                 <div class="section-content">
                     <h2 class="section-title">Feed</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
@@ -189,3 +189,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
