--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section id="about" class="about-section">
                 <div class="section-content">
                     <div class="about-image-wrapper">
-                        <img src="ressources/image.jpg" alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid." class="about-image" />
+                        <img src="ressources/image.webp" alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid." class="about-image" />
                     </div>
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
@@ -119,7 +119,7 @@
 </div> -->
                     </div>
                     <div class="about-image-wrapper">
-                        <img src="ressources/bechers.jpg" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
+                        <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
                     </div>
                     
                 </div>
@@ -129,7 +129,7 @@
             <section id="contact" class="about-section">
                 <div class="section-content">
                     <div class="about-image-wrapper">
-                        <img src="ressources/timely.jpg" alt="An hourglass on a desk, symbolizing timely solutions, with a professional working in the background." class="about-image" />
+                        <img src="ressources/timely.webp" alt="An hourglass on a desk, symbolizing timely solutions, with a professional working in the background." class="about-image" />
                     </div>
                     <div class="about-details">
                         <h2 class="section-title">Contact</h2>
@@ -189,4 +189,5 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
