--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav class="navbar section-content">
                 <a href="#" class="nav-logo">
                     <h1 class="logo-text">
-                        <img class="logo" src="ressources/logo.webp" alt="Longfort Consulting logo" /> Longfort Consulting
+                        <img class="logo" src="ressources/logo.png" alt="Longfort Consulting logo" /> Longfort Consulting
                     </h1>
                     <!-- https://emojipedia.org/microsoft -->
                 </a>
@@ -189,6 +189,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
