--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <li class="nav-item">
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="#posts" class="nav-link">Posts</a>
+                    </li>
                 </ul>
                 <button id="menu-open-button" class="fas fa-bars"></button>
             </nav>
@@ -160,7 +163,7 @@
                     </div>
                 </div>
             </section>
-            <section id="feed">
+            <section id="posts">
                 <div class="section-content">
                     <h2 class="section-title">Posts</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
@@ -189,6 +192,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
