--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <a href="#contact" class="nav-link">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#posts" class="nav-link">Posts</a>
+                        <a href="#blog" class="nav-link">Blog</a>
                     </li>
                 </ul>
                 <button id="menu-open-button" class="fas fa-bars"></button>
@@ -163,7 +163,7 @@
                     </div>
                 </div>
             </section>
-            <section id="posts">
+            <section id="blog">
                 <div class="section-content">
                     <h2 class="section-title">Posts</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
@@ -192,6 +192,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
