--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             </section>
             <section id="blog">
                 <div class="section-content">
-                    <h2 class="section-title">Posts</h2>
+                    <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
                     <script src="https://elfsightcdn.com/platform.js" async></script>
                     <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
@@ -192,6 +192,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
