--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             Clinical research, Health, ansm, Santé, Agence nationale de sécurité du médicament, Longfort, Longfort-Consulting, Sabrina Guittard" >
         <meta name="description" content="Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance.
             Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes." >
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <!-- linking font awesome for icons -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
         <link rel="stylesheet" href="style.css" />
@@ -192,6 +193,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
