--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
                             Longfort Consulting offers specialized clinical trial consulting to streamline
-                            your research and ensure regulatory compliance. Partner with us for expert guidance
+                            your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
-                            and successful trial outcomes.
+                            and <b>successful trial</b> outcomes.
                         </p><span class="buttons">
                     <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a> -->
                 </span>
@@ -77,7 +77,7 @@
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
                            Designing robust clinical trials with clear protocols to ensure international
-                            regulatory compliance and scientific validity.
+                            regulatory <b>compliance</b> and scientific validity.
                         </p>
                         <!--<br>
                             <span>
@@ -193,6 +193,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
