--- a/LegalNotice.html
+++ b/LegalNotice.html
@@ -30,7 +30,7 @@
         <div class="section-content">
             <div class="about-details">
                 <h2 class="section-title">Hébergement du site:</h2>
-                <p><br>Squarespace House<br>Ship Street Great<br>Dublin 8<br>Irlande<br>D08 N12C</p>
+                <p><br>GitHub, Inc.<br>88 Colin P Kelly Jr St<br>San Francisco, CA 94107, USA</p>
             </div>
         </div>
     </section>
