--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Privacy Policy</a>
+                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Mentions Légales</a>
                         <a>|</a>
                         <a>Copyright©</a>
                         <a>|</a>
@@ -193,6 +193,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
