--- a/index.html
+++ b/index.html
@@ -60,12 +60,11 @@
                             your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
                             in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
                             and <b>successful trial</b> outcomes.
-                        </p><span class="buttons">
-                    <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a> -->
-                </span>
-                            <p class="text"><a href="#services" class="about-detail" style="color:#3b3737;text-decoration: none;"><br>Learn More<br>&darr;</a>
                         </p>
-                        
+                        <!-- <span class="buttons">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
+                        </span> -->
+                        <p class="text"><a href="#services" class="about-detail" style="color:#3b3737;text-decoration: none;"><br>Learn More<br>&darr;</a></p>
                     </div>
                 </div>
             </section>
@@ -119,6 +118,7 @@
 <div class="btn-group open">
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
+                    <p class="text"><a href="#form" class="about-detail" style="color:#3b3737;text-decoration: none;"><br>Leave a message<br>&darr;</a></p>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -140,7 +140,7 @@
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
                             <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
                             <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
-                            <a><br><br>Leave a message:</a>
+                            <a id="form"><br><br>Leave a message:</a>
                         </div>
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
@@ -191,6 +191,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
