--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="about-details">
                         <h2 class="section-title">Study Design & Protocol Development</h2>
                         <p class="text">
-                           Designing robust clinical trials with clear protocols to ensure international
+                            Designing <b>robust</b> clinical trials with clear protocols to ensure international
                             regulatory <b>compliance</b> and scientific validity.
                         </p>
                         <!--<br>
@@ -191,6 +191,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
