--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <!-- <span class="buttons">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
                         </span> -->
-                        <p class="text"><a class="social-link" href="#services" class="about-detail"><br>Learn More<br>&darr;</a></p>
+                        <p class="text"><a href="#services" class="about-detail" style="color:#ffca28;text-decoration:none;"><br>Learn More<br>&darr;</a></p>
                     </div>
                 </div>
             </section>
@@ -118,7 +118,7 @@
 <div class="btn-group open">
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
-                    <p class="text"><a class="social-link" href="#form" class="about-detail"><br>Leave a message<br>&darr;</a></p>
+                    <p class="text"><a href="#form" class="about-detail" style="color:#ffca28;text-decoration:none;"><br>Leave a message<br>&darr;</a></p>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -191,6 +191,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
