--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers specialized clinical trial consulting to streamline
+                            Longfort Consulting offers specialized <b>clinical trial</b> consulting to streamline
                             your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
-                            in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
-                            and <b>successful trial</b> outcomes.
+                            in <b>oncology</b>, immunotherapy, rare diseases, child treatment, <b>gene therapy</b> domains
+                            and <b>successful</b> trial outcomes.
                         </p>
                         <!-- <span class="buttons">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
@@ -191,6 +191,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
