--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <div class="btn-group open">
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
-                    <p class="text"><a href="#form" class="about-detail" style="color:#156a83;text-decoration:none;"><br>Leave a message<br>&darr;</a></p>
+                    <p class="text"><a href="#contact" class="about-detail" style="color:#156a83;text-decoration:none;"><br>Leave a message<br>&darr;</a></p>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -136,12 +136,13 @@
                     <div class="about-details">
                         <h2 class="section-title">Contact</h2>
                         <p class="text">Longfort Consulting<br>Toulouse, France</p>
-                        <div id="form" class="social-link-list">
+                        <div class="social-link-list">
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
                             <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> sabrina.guittard@longfort-consulting.com</a>
-                            <a><br><br>Leave a message:</a>
+                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
                         </div>
+                    </div>
+                    <div class="about-details">
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
                             <div class="form-group">
@@ -157,7 +158,7 @@
                               <textarea id="message" name="Message" rows="5" required></textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Send</button>
+                            <button type="submit" class="button">Send a message</button>
                       </form>
                     </div>
                 </div>
@@ -175,7 +176,7 @@
             <section class="footer-section">
                 <div>
                     <div class="footer">
-                        <a style="color:#3b3737;text-decoration: none;" href="LegalNotice.html">Mentions Légales</a>
+                        <a style="color:#3b3737;" href="LegalNotice.html">Mentions Légales</a>
                         <a>|</a>
                         <a>Copyright©</a>
                         <a>|</a>
