--- a/index.html
+++ b/index.html
@@ -61,10 +61,9 @@
                             in <b>oncology</b>, immunotherapy, rare diseases, child treatment, <b>gene therapy</b> domains
                             and <b>successful</b> trial outcomes.
                         </p>
-                        <!-- <span class="buttons">
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="button">Ask an expert</a>
-                        </span> -->
-                        <p class="text"><a href="#services" class="about-detail" style="color:#156a83;text-decoration:none;"><br>Learn More<br>&darr;</a></p>
+                        <span class="buttons">
+                        <a href="#services" class="button">&darr; Learn more</a>
+                        </span>
                     </div>
                 </div>
             </section>
@@ -118,7 +117,9 @@
 <div class="btn-group open">
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
-                    <p class="text"><a href="#contact" class="about-detail" style="color:#156a83;text-decoration:none;"><br>Leave a message<br>&darr;</a></p>
+                    <span class="buttons">
+                        <a href="#contact" class="button">&darr; Leave a message</a>
+                    </span>
                     </div>
                     <div class="about-image-wrapper">
                         <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
@@ -192,24 +193,3 @@
         <script src="script.js"></script>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
