--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     </span>
                     </div>
                     <div class="about-image-wrapper">
-                        <img src="ressources/bechers.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
+                        <img src="ressources/timely.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
                     </div>
                     
                 </div>
@@ -131,9 +131,6 @@
             </section>
             <section id="contact" class="about-section">
                 <div class="section-content">
-                    <div class="about-image-wrapper">
-                        <img src="ressources/timely.webp" alt="An hourglass on a desk, symbolizing timely solutions, with a professional working in the background." class="about-image" />
-                    </div>
                     <div class="about-details">
                         <h2 class="section-title">Contact</h2>
                         <p class="text">Longfort Consulting<br>Toulouse, France</p>
@@ -193,3 +190,4 @@
         <script src="script.js"></script>
     </body>
 </html>
+
