--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                         <h2 class="section-title">Contact</h2>
                         <p class="text">Longfort Consulting<br>Toulouse, France</p>
                         <div class="social-link-list">
+                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
                             <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
                             <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
                         </div>
                     </div>
                     <div class="about-details">
@@ -161,12 +161,14 @@
                     </div>
                 </div>
             </section>
-            <section id="blog">
+            <section id="blog" class="about-section">
                 <div class="section-content">
-                    <h2 class="section-title">Blog</h2>
-                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    <div class="about-details"
+                        <h2 class="section-title">Blog</h2>
+                        <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                        <script src="https://elfsightcdn.com/platform.js" async></script>
+                        <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+                    </div>
                 </div>
             </section>
         </main>
@@ -190,4 +192,5 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
