--- a/index.html
+++ b/index.html
@@ -161,14 +161,12 @@
                     </div>
                 </div>
             </section>
-            <section id="blog" class="about-section">
+            <section id="blog" style="background:--light-pink-color;">
                 <div class="section-content">
-                    <div class="about-details"
-                        <h2 class="section-title">Blog</h2>
-                        <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                        <script src="https://elfsightcdn.com/platform.js" async></script>
-                        <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
-                    </div>
+                    <h2 class="section-title">Blog</h2>
+                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                    <script src="https://elfsightcdn.com/platform.js" async></script>
+                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
                 </div>
             </section>
         </main>
@@ -192,5 +190,6 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
