--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
                     </div>
                 </div>
             </section>
-            <section id="blog">
-                <div class="section-content" style="background:#faf9f6;">
+            <section id="blog" style="background:#faf9f6;">
+                <div class="section-content">
                     <h2 class="section-title">Blog</h2>
                     <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
                     <script src="https://elfsightcdn.com/platform.js" async></script>
@@ -190,6 +190,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
