--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             and <b>successful</b> trial outcomes.
                         </p>
                         <span class="buttons">
-                        <a href="#services" class="button">&darr; Learn more</a>
+                        <a href="#services" class="button" align="left">&darr; Learn more</a>
                         </span>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
                     <span class="buttons">
-                        <a href="#contact" class="button">&darr; Leave a message</a>
+                        <a href="#contact" class="button" align="left">&darr; Leave a message</a>
                     </span>
                     </div>
                     <div class="about-image-wrapper">
@@ -190,6 +190,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
