--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             and <b>successful</b> trial outcomes.
                         </p>
                         <span class="buttons">
-                        <a href="#services" class="button" align="right">&darr; Learn more</a>
+                        <a href="#services" class="button">&darr; Learn more</a>
                         </span>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
   <a class="btn btn-primary" href="#"> Submit</a>
 </div> -->
                     <span class="buttons">
-                        <a href="#contact" class="button" align="right">&darr; Leave a message</a>
+                        <a href="#contact" class="button">&darr; Leave a message</a>
                     </span>
                     </div>
                     <div class="about-image-wrapper">
@@ -156,7 +156,7 @@
                               <textarea id="message" name="Message" rows="5" required></textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Send a message</button>
+                            <button type="submit" class="button">Send</button>
                       </form>
                     </div>
                 </div>
@@ -190,6 +190,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
