--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                               <textarea id="message" name="Message" rows="5" required></textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Send</button>
+                            <button type="submit" class="button">Send <i class="fa fa-paper-plane"></i></button>
                       </form>
                     </div>
                 </div>
@@ -190,6 +190,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
