--- a/index.html
+++ b/index.html
@@ -130,17 +130,7 @@
                 </div>
             </section>
             <section id="contact" class="about-section">
-                <div class="section-content">
-                    <div class="about-details">
-                        <h2 class="section-title">Contact</h2>
-                        <p class="text">Longfort Consulting<br>Toulouse, France</p>
-                        <div class="social-link-list">
-                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
-                            <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                        </div>
-                    </div>
-                    <div class="about-details">
+                <div class="about-details">
                         <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
                             <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
                             <div class="form-group">
@@ -156,8 +146,18 @@
                               <textarea id="message" name="Message" rows="5" required></textarea>
                             </div>
                             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Send <i class="fa fa-paper-plane"></i></button>
+                            <button type="submit" class="button">Send <!--<i class="fa fa-paper-plane"></i>--></button>
                       </form>
+                    </div>
+                    <div class="section-content">
+                    <div class="about-details">
+                        <h2 class="section-title">Contact</h2>
+                        <p class="text">Longfort Consulting<br>Toulouse, France</p>
+                        <div class="social-link-list">
+                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
+                            <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
+                            <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -190,6 +190,7 @@
         <script src="script.js"></script>
     </body>
 </html>
+
 
 
 
