--- a/index.html
+++ b/index.html
@@ -1,81 +1,86 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="color-scheme" content="only light">
-        <title>Longfort Consulting | Clinical trial advisor</title>
-        <meta name="description" content="Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance.
-            Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes." >
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
-        <!-- linking font awesome for icons -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <body>
-        <!-- Header / Navbar -->
-        <header>
-            <nav class="navbar section-content">
-                <a href="#" class="nav-logo">
-                    <h1 class="logo-text">
-                        <img class="logo" src="ressources/logo.png" alt="Longfort Consulting logo" /> Longfort Consulting
-                    </h1>
-                    <!-- https://emojipedia.org/microsoft -->
-                </a>
-                <ul class="nav-menu">
-                    <button id="menu-close-button" class="fas fa-times"></button>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link">Home</a>
-                    </li>
-                    <!--<li class="nav-item">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="only light">
+    <title>Longfort Consulting | Clinical trial advisor</title>
+    <meta name="description"
+        content="Longfort Consulting offers specialized clinical trial consulting to streamline your research and ensure regulatory compliance.
+            Partner with us for expert guidance in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and successful trial outcomes.">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- linking font awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+    <!-- Header / Navbar -->
+    <header>
+        <nav class="navbar section-content">
+            <a href="#" class="nav-logo">
+                <h1 class="logo-text">
+                    <img class="logo" src="ressources/logo.png" alt="Longfort Consulting logo" /> Longfort Consulting
+                </h1>
+                <!-- https://emojipedia.org/microsoft -->
+            </a>
+            <ul class="nav-menu">
+                <button id="menu-close-button" class="fas fa-times"></button>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <!--<li class="nav-item">
                         <a href="#about" class="nav-link">About</a>
                     </li>-->
-                    <li class="nav-item">
-                        <a href="#services" class="nav-link">Services</a>
-                    </li>
-                    <!-- <li class="nav-item">
+                <li class="nav-item">
+                    <a href="#services" class="nav-link">Services</a>
+                </li>
+                <!-- <li class="nav-item">
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLSd-CTN1KmczuYwppfvYpVWLbSUwZsNV8JDbJ0cT_zIc4-puaw/viewform?usp=header" target="_blank" class="nav-link">Ask</a>
                     </li> -->
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#blog" class="nav-link">Blog</a>
-                    </li>
-                </ul>
-                <button id="menu-open-button" class="fas fa-bars"></button>
-            </nav>
-        </header>
-        <main class="main">
-            <!-- About section -->
-            <section id="about" class="about-section">
-                <div class="section-content">
-                    <div class="about-image-wrapper">
-                        <img src="ressources/image.webp" alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid." class="about-image" />
-                    </div>
-                    <div class="about-details">
-                        <h2 class="section-title">About Us</h2>
-                        <p class="text">
-                            Longfort Consulting offers specialized <b>clinical trial</b> consulting to streamline
-                            your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
-                            in <b>oncology</b>, immunotherapy, rare diseases, child treatment, <b>gene therapy</b> domains
-                            and <b>successful</b> trial outcomes.
-                        </p>
-                        <span class="buttons">
-                        <a href="#services" class="button">&darr; Learn more</a>
-                        </span>
-                    </div>
+                <li class="nav-item">
+                    <a href="#contact" class="nav-link">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#blog" class="nav-link">Blog</a>
+                </li>
+            </ul>
+            <button id="menu-open-button" class="fas fa-bars"></button>
+        </nav>
+    </header>
+    <main class="main">
+        <!-- About section -->
+        <section id="about" class="about-section">
+            <div class="section-content">
+                <div class="about-image-wrapper">
+                    <img src="ressources/image.webp"
+                        alt="Two scientists in a lab coat reviewing documents, with 'Clinical Trial' and related icons overlaid."
+                        class="about-image" />
                 </div>
-            </section>
-            <section id="services" class="about-section">
-                <div class="section-content">
-                    <div class="about-details">
-                        <h2 class="section-title">Study Design & Protocol Development</h2>
-                        <p class="text">
-                            Designing <b>robust</b> clinical trials with clear protocols to ensure international
-                            regulatory <b>compliance</b> and scientific validity.
-                        </p>
-                        <!--<br>
+                <div class="about-details">
+                    <h2 class="section-title">About Us</h2>
+                    <p class="text">
+                        Longfort Consulting offers specialized <b>clinical trial</b> consulting to streamline
+                        your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
+                        in <b>oncology</b>, immunotherapy, rare diseases, child treatment, <b>gene therapy</b> domains
+                        and <b>successful</b> trial outcomes.
+                    </p>
+                    <span class="buttons">
+                        <a href="#services" class="button">&darr; Learn more</a>
+                    </span>
+                </div>
+            </div>
+        </section>
+        <section id="services" class="about-section">
+            <div class="section-content">
+                <div class="about-details">
+                    <h2 class="section-title">Study Design & Protocol Development</h2>
+                    <p class="text">
+                        Designing <b>robust</b> clinical trials with clear protocols to ensure international
+                        regulatory <b>compliance</b> and scientific validity.
+                    </p>
+                    <!--<br>
                             <span>
                                 <a>&#x2705; time</a> 
                                 <br>
@@ -107,97 +112,93 @@
                                 <br>
                                 <a>&#9634; zqdsdsqd</a>                               
                             </span>
-<div class="input-group margin-bottom-sm">
-  <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
-  <input class="form-control" type="text" placeholder="Email address">
-</div>
-<div class="input-group">
-  <input class="form-control" type="password" placeholder="Description">
-</div>
-<div class="btn-group open">
-  <a class="btn btn-primary" href="#"> Submit</a>
-</div> -->
+                        <div class="input-group margin-bottom-sm">
+                            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                            <input class="form-control" type="text" placeholder="Email address">
+                        </div>
+                        <div class="input-group">
+                            <input class="form-control" type="password" placeholder="Description">
+                        </div>
+                        <div class="btn-group open">
+                            <a class="btn btn-primary" href="#"> Submit</a>
+                        </div> -->
                     <span class="buttons">
                         <a href="#contact" class="button">&darr; Leave a message</a>
                     </span>
-                    </div>
-                    <div class="about-image-wrapper">
-                        <img src="ressources/timely.webp" alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research." class="about-image"/>
-                    </div>
-                    
+                </div>
+                <div class="about-image-wrapper">
+                    <img src="ressources/timely.webp"
+                        alt="Glass beakers on a table in a sunny, outdoor setting, representing scientific research."
+                        class="about-image" />
+                </div>
+
+            </div>
+            <div class="about-details">
+            </div>
+        </section>
+        <section id="contact" class="about-section">
+            <div class="section-content">
+                <div class="about-details">
+                    <p class="text">Request form</p>
+                    <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
+                        <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
+                        <div class="form-group">
+                            <label for="name">Name</label>
+                            <input type="text" id="name" name="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Message</label>
+                            <textarea id="message" name="Message" rows="5" required></textarea>
+                        </div>
+                        <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
+                        <button type="submit" class="button">Send <!--<i class="fa fa-paper-plane"></i>--></button>
+                    </form>
                 </div>
                 <div class="about-details">
-                </div>
-            </section>
-            <section id="contact" class="about-section">
-                <div class="section-content">
-                    <div class="about-details">
-                        <form action="https://api.web3forms.com/submit" method="POST" class="styled-form">
-                            <input type="hidden" name="access_key" value="9aa4c03f-af54-404b-b9f9-ecf3e5fa28b5">
-                            <div class="form-group">
-                              <label for="name">Name</label>
-                              <input type="text" id="name" name="Name" required>
-                            </div>
-                            <div class="form-group">
-                              <label for="email">Email</label>
-                              <input type="email" id="email" name="email" required>
-                            </div>
-                            <div class="form-group">
-                              <label for="message">Message</label>
-                              <textarea id="message" name="Message" rows="5" required></textarea>
-                            </div>
-                            <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
-                            <button type="submit" class="button">Send <!--<i class="fa fa-paper-plane"></i>--></button>
-                      </form>
-                    </div>
-                    <div class="about-details">
-                        <h2 class="section-title">Contact</h2>
-                        <p class="text">Longfort Consulting<br>Toulouse, France</p>
-                        <div class="social-link-list">
-                            <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information" class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
-                            <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank" class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
-                            <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33 680012884</a>
-                        </div>
+                    <h2 class="section-title">Contact</h2>
+                    <p class="text">Longfort Consulting<br>Toulouse, France</p>
+                    <div class="social-link-list">
+                        <a href="mailto:sabrina.guittard@longfort-consulting.com?subject=Request for information"
+                            class="social-link"><i class="fa-solid fa-envelope"></i> email</a>
+                        <a href="https://www.linkedin.com/in/sabrina-guittard-3106272b" target="_blank"
+                            class="social-link">Linked<i class="fa-brands fa-linkedin"></i></a>
+                        <a href="tel:+33680012884" class="social-link"><i class="fa-brands fa-whatsapp"></i> +33
+                            680012884</a>
                     </div>
                 </div>
-            </section>
-            <section id="blog" style="background:#faf9f6;">
-                <div class="section-content">
-                    <h2 class="section-title">Blog</h2>
-                    <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
-                    <script src="https://elfsightcdn.com/platform.js" async></script>
-                    <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+            </div>
+        </section>
+        <section id="blog" class="blog-section">
+            <div class="section-content">
+                <h2 class="section-title">Blog</h2>
+                <!-- Elfsight LinkedIn Feed | Untitled LinkedIn Feed -->
+                <script src="https://elfsightcdn.com/platform.js" async></script>
+                <div class="elfsight-app-37e8d025-f183-418a-832d-4a11719773ef" data-elfsight-app-lazy></div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <section class="footer-section">
+            <div>
+                <div class="footer">
+                    <a style="color:#3b3737;" href="LegalNotice.html">Mentions Légales</a>
+                    <a>|</a>
+                    <a>Copyright©</a>
+                    <a>|</a>
+                    <a>Longfort Consulting</a>
+                    <a>|</a>
+                    <a>&#127850;Cookie-free</a>
+                    <a>|</a>
+                    <a>&#x1F33F;0.11g CO²/visit</a>
                 </div>
-            </section>
-        </main>
-        <footer class="footer">
-            <section class="footer-section">
-                <div>
-                    <div class="footer">
-                        <a style="color:#3b3737;" href="LegalNotice.html">Mentions Légales</a>
-                        <a>|</a>
-                        <a>Copyright©</a>
-                        <a>|</a>
-                        <a>Longfort Consulting</a>
-                        <a>|</a>
-                        <a>&#127850;Cookie-free</a>
-                        <a>|</a>
-                        <a>&#x1F33F;0.11g CO²/visit</a>
-                    </div>
-                </div>
-            </section>
-        </footer>
-        <script src="script.js"></script>
-    </body>
+            </div>
+        </section>
+    </footer>
+    <script src="script.js"></script>
+</body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
-
