--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
                 <div class="about-details">
                     <h2 class="section-title">About Us</h2>
                     <p class="text">
-                        Longfort Consulting offers specialized <b>clinical trial</b> consulting to streamline
-                        your research and ensure <b>regulatory compliance</b>. Partner with us for expert guidance
-                        in <b>oncology</b>, immunotherapy, rare diseases, child treatment, <b>gene therapy</b> domains
-                        and <b>successful</b> trial outcomes.
+                        Longfort Consulting offers specialized clinical trial consulting to master
+                        your research and ensure <b>regulatory compliance</b> in a timeboxed way. Partner with us for <b>expert guidance</b>
+                        in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains
+                        and reach successful trial outcomes.
                     </p>
                     <span class="buttons">
                         <a href="#services" class="button">&darr; Learn more</a>
