--- a/index.html
+++ b/index.html
@@ -63,11 +63,17 @@
                     <div class="about-details">
                         <h2 class="section-title">About Us</h2>
                         <p class="text">
-                            Longfort Consulting offers specialized clinical trial consulting to master your research and
-                            ensure <b>regulatory compliance</b> in a timeboxed way. Partner with us for
-                            <b>expert guidance</b>
-                            in oncology, immunotherapy, rare diseases, child treatment, gene therapy domains and reach
-                            successful trial outcomes.
+                            Longfort Consulting offers clinical trial expertize to obtain
+                            <b>regulatory compliance</b> in a timeboxed way.
+                        </p>
+                        <p class="text">
+                            Benefits our <b>guidance</b> in oncology, immunotherapy, rare diseases, child
+                            treatment and gene therapy domains to achieve successful trial outcomes.
+                        </p>
+                        <p class="text">
+                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
+                            document set to obtain <b>right first time</b> international regulatory
+                            <b>compliance</b> and scientific validity.
                         </p>
                         <span class="buttons">
                             <a href="#services" class="button">&darr; Learn more</a>
@@ -79,14 +85,9 @@
                 <div class="section-content">
                     <div class="about-details">
                         <h2 class="section-title">Services<!--Study Design & Protocol Development--></h2>
-                        <p class="text">
-                            Conduct robust <b>clinical trials</b> using <b>bulletproof</b> protocols and a tailored
-                            document set to obtain <b>right first time</b> international regulatory
-                            <b>compliance</b> and scientific validity.
-                        </p>
                         <div>
-                            <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1.5rem; color: #3d7489"
+                            <div style="padding: 32px 0 0px 10px">
+                                <a class="text" style="font-size: 1rem; color: #3d7489"
                                     >Regulatory strategy (Regulatory lead)</a
                                 >
                             </div>
@@ -100,7 +101,7 @@
                                 >
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1.5rem; color: #3d7489"
+                                <a class="text" style="font-size: 1rem; color: #3d7489"
                                     >Operational coord. (Start-up)</a
                                 ><br />
                             </div>
@@ -114,7 +115,7 @@
                                 <a class="text">&#9634; Coordination of multi-center projects (EU, UK, US, LATAM).</a>
                             </div>
                             <div style="padding: 0 0 0px 10px">
-                                <a class="text" style="font-size: 1.5rem; color: #3d7489">Support</a>
+                                <a class="text" style="font-size: 1rem; color: #3d7489">Support</a>
                             </div>
                             <div style="padding: 0 0 0px 30px">
                                 <a class="text">&#9634; Startup project management.</a>
